// python3 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. stocks.proto

syntax = "proto3";

option java_package = "com.example.ffbackend.rpc.proto";
option java_outer_classname = "StocksProto";

service Stocks{
    rpc GetAllStocks(GetAllStocksInput)returns (GetAllStocksOutput){}

    rpc GetStockHistory(GetStockHistoryInput)returns(GetStockHistoryOutput){}

}

message GetAllStocksInput{

}

message GetAllStocksOutput{
    repeated string value = 1;
}

message GetStockHistoryInput{
    string stock_code = 1;
}

message GetStockHistoryOutput{
    repeated GetStockHistoryRow value = 1;
}

message GetStockHistoryRow{
    repeated string row = 1;
}
